syntax = "proto3";

package test;

service TestService {
  rpc Add(AddRequest) returns (AddResponse) {}

  // This method can be called using GET request
  rpc Get(GetRequest) returns (GetResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 sum = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}
